<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeholderText"
        style="@style/NameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:text="@string/feed_placeholder"
        android:visibility="invisible"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appLogoImage"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/app_logo"
        android:layout_marginTop="@dimen/margin"
        android:adjustViewBounds="true"
        android:paddingVertical="@dimen/app_logo_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_main_logo" />

    <ScrollView
        android:id="@+id/cardScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/alt_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/refuseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogoImage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profilePictureImage"
                android:layout_width="@dimen/big_profile_picture"
                android:layout_height="@dimen/big_profile_picture"
                android:layout_marginTop="@dimen/margin"
                android:background="@drawable/shape_profile_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameText"
                style="@style/NameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_2x"
                android:text="@string/name_placeholder"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePictureImage" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/interestsChipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                app:chipSpacing="@dimen/margin_half"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameText" />

            <TextView
                android:id="@+id/descriptionText"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_2x"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/description_placeholder"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/interestsChipGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/refuseButton"
        style="@style/Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginBottom="@dimen/alt_margin"
        android:backgroundTint="@color/white"
        android:text="@string/refuse"
        android:visibility="invisible"
        app:icon="@drawable/ic_dislike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/likeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButton"
        style="@style/Button.Accent.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/alt_margin"
        android:backgroundTint="@color/white"
        android:text="@string/like"
        android:visibility="invisible"
        app:icon="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/refuseButton" />

</androidx.constraintlayout.widget.ConstraintLayout>