<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_fragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        style="@style/Toolbar.Layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:title="@string/profile">

            <ImageView
                android:id="@+id/logoutButton"
                android:layout_width="@dimen/alt_margin"
                android:layout_height="@dimen/alt_margin"
                android:src="@drawable/ic_logout"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin"
                android:scaleType="fitCenter"
                app:tint="@color/accent" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/alt_margin"
        app:layout_constraintBottom_toTopOf="@id/editButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profilePictureImage"
                android:layout_width="@dimen/big_profile_picture"
                android:layout_height="@dimen/big_profile_picture"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/shape_profile_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameText"
                style="@style/NameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_2x"
                android:text="@string/name_placeholder"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePictureImage" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/interestsChipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                app:chipSpacing="@dimen/margin_half"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameText" />

            <TextView
                android:id="@+id/descriptionText"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_2x"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/description_placeholder"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/interestsChipGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        style="@style/Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/alt_margin"
        android:backgroundTint="@color/white"
        android:text="@string/edit"
        app:icon="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>